- Added links to Mod Menu UI - Changed Fletcher villager Quiver trade to only use Flint Arrows - Added crafting sound to Fletching Table - Fixed bug where you get kicked out of world upon running out of arrows in a quiver

--- a/src/main/resources/assets/fletching-expanded/lang/en_us.json
+++ b/src/main/resources/assets/fletching-expanded/lang/en_us.json
@@ -30,7 +30,8 @@
   "subtitles.fletching-expanded.slime_arrow.hit": "Slime arrow bounces",
   "subtitles.fletching-expanded.echo_arrow.hit": "Echo arrow explodes",
   "subtitles.fletching-expanded.homing_arrow.target": "Homing arrow locks onto target",
-  "subtitles.fletching-expanded.fletching_table_potion": "Fletching Table brews",
+  "subtitles.fletching-expanded.fletching_table_potion": "Fletching Table crafts Tipped Arrows",
+  "subtitles.fletching-expanded.fletching_table_craft": "Fletching Table crafts arrows",
   "subtitles.fletching-expanded.bow_enchanted_charge": "Bow fully charges",
 
   "tooltip.fletching-expanded.quiver1": ""
